--- a/robot_code/requirements.txt
+++ b/robot_code/requirements.txt
@@ -1,7 +1,7 @@
 RPi.GPIO
 smbus
 smbus2
-torch==1.10.0+cpu
-torchvision==0.11.1+cpu
 picamera==1.13
 Pillow==8.1.0
+torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
+torchvision>=0.9.0
