--- a/robot_code/requirements.txt
+++ b/robot_code/requirements.txt
@@ -1,6 +1,9 @@
 RPi.GPIO
 smbus
 smbus2
-Pillow==8.1.0
-torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
-torchvision>=0.9.0
+rplidar
+numpy
+threading  
+#Pillow==8.1.0
+#torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
+#torchvision>=0.9.0
